--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
+    "babel-eslint": "^10.0.1",
+    "egg": "^2.6.1",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.16.0",
+    "egg-redis": "^2.3.1",
     "eslint": "^5.16.0",
-    "babel-eslint": "^10.0.1",
-    "egg": "^2.6.1",
     "eslint-config-egg": "^7.3.1",
+    "jsonwebtoken": "^8.5.1",
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "tslint-config-egg": "^1.0.0",
