--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^5.16.0",
     "eslint-config-egg": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "tslint-config-egg": "^1.0.0",
