--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "egg": "^2.6.1",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.8.0",
+    "egg-cors": "^2.2.0",
     "egg-mock": "^3.16.0",
     "egg-redis": "^2.3.1",
     "eslint": "^5.16.0",
