--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^4.3.1",
-    "mysql2": "^1.6.5"
+    "egg-shell-decorators": "^1.0.7",
+    "mysql2": "^1.6.5",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
@@ -36,13 +38,15 @@
     "egg": "^2.6.1",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.8.0",
+    "egg-controller": "^0.3.28",
     "egg-cors": "^2.2.0",
     "egg-mock": "^3.16.0",
     "egg-redis": "^2.3.1",
     "eslint": "^5.16.0",
     "eslint-config-egg": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize-typescript": "^0.6.10",
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "tslint-config-egg": "^1.0.0",
