--- a/database/config.json
+++ b/database/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": "yujiajun1234",
-    "database": "yujiajun1234",
-    "host": "javen",
+    "database": "zhiqu",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "yujiajun1234",
+    "database": "zhiqu",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "yujiajun1234",
+    "database": "zhiqu",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
