--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^4.3.1",
     "egg-shell-decorators": "^1.0.7",
+    "egg-validate-plus": "^1.1.6",
+    "md5": "^2.2.1",
     "mysql2": "^1.6.5",
     "sequelize-cli": "^5.4.0"
   },
@@ -45,6 +47,7 @@
     "eslint": "^5.16.0",
     "eslint-config-egg": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^0.6.10",
     "tslib": "^1.9.0",
