--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "allowJs": false,
     "pretty": true,
     "noEmitOnError": false,
-    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
@@ -20,7 +19,8 @@
     "skipLibCheck": false,
     "skipDefaultLibCheck": true,
     "inlineSourceMap": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "noUnusedLocals":true
   },
   "exclude": [
     "app/public",
