--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-api",
   "version": "1.0.0",
-  "description": "聊天室的api",
+  "description": "投票软件",
   "private": true,
   "egg": {
     "typescript": true,
@@ -19,7 +19,10 @@
     "ci": "npm run lint && npm run cov && npm run tsc",
     "autod": "autod",
     "lint": "tslint --project . -c tslint.json",
-    "clean": "ets clean"
+    "clean": "ets clean",
+    "migrate:new": "egg-sequelize migration:create --name init",
+    "migrate:up": "egg-sequelize db:migrate",
+    "migrate:down": "egg-sequelize db:migrate:undo"
   },
   "dependencies": {
     "egg-scripts": "^2.6.0",
@@ -27,6 +30,7 @@
     "egg-shell-decorators": "^1.0.7",
     "egg-validate-plus": "^1.1.6",
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "sequelize-cli": "^5.4.0"
   },
@@ -49,7 +53,6 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
-    "sequelize-typescript": "^0.6.10",
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "tslint-config-egg": "^1.0.0",
